--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -19,8 +19,13 @@
       <li class="nav-item">
         <a class="nav-link" href="/challenge/weekly">Weekly Challenge</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/search">Song Leaderboards</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Leaderboards
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="nav-link" href="/search">Individual Songs</a>
+        </div>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
