Removed mentions of the site being XX exclusive

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,7 +4,7 @@
     <title>About</title>
     {% block meta %}
       <meta property="og:title" content="Arrow Tracker: The PIU Score Tracker"/>
-      <meta property="og:description" content="A handy score tracking utility for PIU XX with screenshot support"/>
+      <meta property="og:description" content="A handy score tracking utility for Pump it Up!"/>
       <meta property="og:url" content="https://arrowtracker.duckdns.org/">
       <meta name="theme-color" content="#99beea">
       <meta name="robots" content="none">
