--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -4,7 +4,7 @@
     <title>ERROR 404</title>
     {% block meta %}
       <meta property="og:title" content="Arrow Tracker: 404"/>
-      <meta property="og:description" content="A handy score tracking utility for PIU XX with screenshot support"/>
+      <meta property="og:description" content="A handy score tracking utility for Pump it Up!"/>
       <meta property="og:url" content="https://arrowtracker.duckdns.org/">
     {% endblock meta %}
   {% endblock %}
