Minor changes, updated changelog

--- a/app/templates/weekly.html
+++ b/app/templates/weekly.html
@@ -147,7 +147,7 @@
       <div style="overflow: auto; max-width: 100%">
         <table class="table table-striped">
           <th>Song</th>
-          <th>Difficulty</th>
+          <th>Type & Difficulty</th>
           <th>Letter Grade</th>
           <th>Score</th>
           <th>Stage Pass</th>
