--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,7 @@
     <h4>{{ total }} Total Scores</h4>
     <hr class="my-4">
     {% for score in scores.items %}
-      <article class="media content-section" style="overflow: auto; max-width: 100%">
+      <article class="media content-section" style="overflow: auto; max-width: 100%;">
         <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
         <div class="media-body">
           <div class="article-metadata">
@@ -24,21 +24,34 @@
             <small class="text-muted">{{ score.date_posted.strftime('%Y-%m-%d') }}</small>
           </div>
           <h2>
-            {% if score.song in songdata %}
-            <div style="padding-right: 5pt; padding-top: 5pt; padding-bottom: 5pt">
-              <img class="rounded float-right" width="170pt" src="{{ url_for('static', filename='songthumbs/{}.png'.format(songdata[score.song]['id'])) }}">
+            <div>
+              {% if score.song in songdata %}
+                <img class="rounded float-right" width="170pt" src="{{ url_for('static', filename='songthumbs/{}.png'.format(songdata[score.song]['id'])) }}">
+              {% endif %}
+              <div style="padding-right: 5pt;">
+                {% if score.lettergrade == "a" and score.stagepass == "True" %}
+                  <img class="rounded float-right" width="80pt" src="{{ url_for('static', filename='judgements/sp_a.png') }}">
+                {% elif score.lettergrade == "s" and score.stagepass == "True" %}
+                  <img class="rounded float-right" width="80pt" src="{{ url_for('static', filename='judgements/s.png') }}">
+                {% elif score.lettergrade == "ss" and score.stagepass == "True" %}
+                  <img class="rounded float-right" width="100pt" src="{{ url_for('static', filename='judgements/ss.png') }}">
+                {% elif score.lettergrade == "sss" and score.stagepass == "True" %}
+                  <img class="rounded float-right" width="100pt" src="{{ url_for('static', filename='judgements/sss.png') }}">
+                {% endif %}
+              </div>
+              <div class="float-left">
+                <a class="article-title" href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a>
+                <h3>
+                  {{score.length}}
+                </h3>
+                {% if score.image_file != "None" and score.platform == "pad" %}
+                  <h4><span class="badge badge-success">Verified!</span></h4>
+                {% elif score.image_file != "None" and score.platform != "pad" %}
+                  <h4><span class="badge badge-info">Verified SF2!</span></h4>
+                {% endif %}
+              </div>
             </div>
-            {% endif %}
-            <a class="article-title" href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a>
           </h2>
-          <h3>
-            {{score.length}}
-          </h3>
-          {% if score.image_file != "None" and score.platform == "pad" %}
-            <h4><span class="badge badge-success">Verified!</span></h4>
-          {% elif score.image_file != "None" and score.platform != "pad" %}
-            <h4><span class="badge badge-info">Verified SF2!</span></h4>
-          {% endif %}
           <div class="article-content">
             <div class="table-responsive">
               <table class="table">
