--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -22,13 +22,13 @@
     <div class="content-section">
       <legend class="border-bottom mb-4">Update Account Details</legend>
       <div>
-        <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#premadePfp" aria-expanded="false">
+        <button style="margin: 2pt" class="btn btn-success" type="button" data-toggle="collapse" data-target="#premadePfp" aria-expanded="false">
           ArrowTracker Profile Images
         </button>
-        <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#premadePfpP2" aria-expanded="false">
+        <button style="margin: 2pt" class="btn btn-success" type="button" data-toggle="collapse" data-target="#premadePfpP2" aria-expanded="false">
           Prime 2 Profile Images
         </button>
-        <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#premadePfpXX" aria-expanded="false">
+        <button style="margin: 2pt" class="btn btn-success" type="button" data-toggle="collapse" data-target="#premadePfpXX" aria-expanded="false">
           XX Profile Images
         </button>
       </div><br>
