heck i forgot to fix this

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -103,7 +103,7 @@
       <div class="content-section collapse" id="premadePfpXX">
         <form action="{{ url_for('users.update_pfp') }}" method="POST">
           <div class="btn-group" role="group" aria-label="Default Profile Images">
-            <button type="submit" class="btn btn-secondary" name="submit_button" value="defaultxx.png"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/defaultxx.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="defaultxx.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/defaultxx.jpg') }}" /></button>
             <button type="submit" class="btn btn-secondary" name="submit_button" value="defaultxx_1.png"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/defaultxx_1.png') }}" /></button>
             <button type="submit" class="btn btn-secondary" name="submit_button" value="defaultxx_2.png"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/defaultxx_2.png') }}" /></button>
             <button type="submit" class="btn btn-secondary" name="submit_button" value="defaultxx_3.png"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/defaultxx_3.png') }}" /></button>
