Better song search

--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -27,8 +27,10 @@
     {% for score in results %}
     <tr>
       <td><a href="/post/{{score.id}}">{{score.song}}</a>
-        {% if score.image_file != "None" %}
+        {% if score.image_file != "None" and score.platform == "pad" %}
           <span style="padding-left: 5pt"><span class="badge badge-pill badge-success">Verified!</span></span>
+        {% elif score.image_file != "None" and score.platform != "pad" %}
+          <span style="padding-left: 5pt"><span class="badge badge-pill badge-info">SF2 Verified!</span></span>
         {% endif %}
       </td>
       <td>{{score.length}}</td>
