--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -12,6 +12,9 @@
   {% endblock %}
 </head>
 {% block body %}
+  <h2>Members</h2>
+  <h4>{{ total }} Total Members</h4>
+  <hr />
   <div class="row">
     {% for user in users %}
       <div class="col-sm-4" style="padding-bottom: 20pt">
