--- a/app/templates/changelog.html
+++ b/app/templates/changelog.html
@@ -16,6 +16,6 @@
   <h1><img src="{{ url_for('static', filename='newlogo-arrow-small.png') }}" alt="" />&nbsp&nbspArrow Tracker Changelog</h1>
     <hr />
     <h3>New this update:</h3>
-    <pre style='text-align: left'>{{ changelog }}</pre>
+    <pre style="text-align: left" class="animated fadeIn">{{ changelog }}</pre>
 </div>
 {% endblock %}
