--- a/app/templates/howto.html
+++ b/app/templates/howto.html
@@ -17,7 +17,7 @@
   <hr />
   <h3>Submitting scores</h3>
   <p>Scores can be submitted via the "Submit Score" button up on the navigation bar.</p>
-  <table class="table" style="text-align: left">
+  <table class="table animated fadeIn" style="text-align: left">
     <tr>
       <th>Song</th>
       <td>A simple dropdown displaying every available song, sorted alphabetically.</td>
