--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -7,7 +7,7 @@
 
   <div class="collapse navbar-collapse" id="navbarColor03">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" style="padding-right: 5px">
+      <li class="nav-item animated flash" style="padding-right: 5px">
         <a href="/post/new_score" class="btn btn-outline-success" role="button" aria-pressed="true">Submit Score</a>
       </li>
       <li class="nav-item">
