--- a/app/templates/resources.html
+++ b/app/templates/resources.html
@@ -15,7 +15,7 @@
 <div class="jumbotron text-center">
   <h1><img src="{{ url_for('static', filename='newlogo-arrow-small.png') }}" alt="" />&nbsp&nbspResources</h1>
     <hr />
-    <table class="table" style="text-align: left">
+    <table class="table animated fadeIn" style="text-align: left">
       <tr>
         <th>PIU XX Official Site</th>
         <td><a href="http://www.piugame.com/piu.xx/">PIUGame</a></td>
