--- a/app/templates/tournaments.html
+++ b/app/templates/tournaments.html
@@ -14,7 +14,7 @@
 {% block body %}
   <div class="row">
     {% for tournament in tournaments.items %}
-      <div class="col-sm-6" style="padding-bottom: 20pt">
+      <div class="col-sm-6 animated pulse" style="padding-bottom: 20pt">
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">{{tournament.name}}</h3>
