--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -12,11 +12,13 @@
   {% endblock %}
 </head>
 {% block body %}
+<div style="z-index: -1;" class="animated fadeInDown">
   <h1>{{ user.username }}'s Scores</h1>
   <h4>{{ scores.total }} Scores</h4>
+</div>
   <hr class="my-4">
   {% for score in scores.items %}
-  <article class="media content-section" style="overflow: auto; max-width: 100%">
+  <article class="media content-section animated bounceInLeft" style="overflow: auto; max-width: 100%">
     <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
     <div class="media-body">
       <div class="article-metadata">
