--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -17,7 +17,7 @@
   <hr />
   <div class="row">
     {% for user in users %}
-      <div class="col-sm-4" style="padding-bottom: 20pt">
+      <div class="col-sm-4 animated pulse" style="padding-bottom: 20pt">
         <div class="card">
           <div class="card-body" style="white-space:nowrap">
             <div style="display: inline">
