--- a/app/templates/weekly.html
+++ b/app/templates/weekly.html
@@ -20,8 +20,10 @@
   <h2>Weekly Challenge</h2>
   <hr />
   <div class="jumbotron text-center">
-    <h1 class="display-4">「{{ current_weekly[0] }}」</h1>
-    <h2>{{ current_weekly[1] }}</h2>
+    <div class="animated fadeIn">
+      <h1 class="display-4">「{{ current_weekly[0] }}」</h1>
+      <h2>{{ current_weekly[1] }}</h2>
+    </div>
     <hr />
     <p class="lead">
       Submit scores for the weekly challenge below! Users with top scores at the end of the week will earn points on their profiles once this feature is completely finished. For now, it's all for fun!
@@ -145,7 +147,7 @@
     </div>
     {% if ldb != None %}
       <div style="overflow: auto; max-width: 100%">
-        <table class="table table-striped">
+        <table class="table table-striped animated fadeInLeft">
           <th>Song</th>
           <th>Type & Difficulty</th>
           <th>Letter Grade</th>
