--- a/app/templates/weeklyscore.html
+++ b/app/templates/weeklyscore.html
@@ -29,7 +29,7 @@
       </div>
       <h2 class="article-title">{{ score.song }}</h2>
       <div style="padding: 10px">
-        <table class="table">
+        <table class="table animated fadeInLeft">
           <thead class="thead-dark">
             <tr>
               <th scope="col">Song</th>
