--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -14,7 +14,7 @@
 {% block body %}
 <h1 style="padding: 10px">Search Results</h1>
 <div style="overflow: auto; max-width: 100%">
-  <table class="table table-striped">
+  <table class="table table-striped animated fadeInLeft">
     <th>Song</th>
     <th>Length</th>
     <th>Difficulty</th>
