--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -18,7 +18,7 @@
 </div>
   <hr class="my-4">
   {% for score in scores.items %}
-  <article class="media content-section animated bounceInLeft" style="overflow: auto; max-width: 100%">
+  <article class="media content-section animated fadeInLeft" style="overflow: auto; max-width: 100%">
     <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
     <div class="media-body">
       <div class="article-metadata">
