Fixed navbar dropdowns

--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -24,7 +24,7 @@
           Leaderboards
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="nav-link" href="/search">Individual Songs</a>
+          <a class="dropdown-item" href="/search">Individual Songs</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -32,10 +32,10 @@
           Info & About
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="nav-link" href="/about">About</a>
-          <a class="nav-link" href="/howto">How To Use</a>
-          <a class="nav-link" href="/resources">Resources</a>
-          <a class="nav-link" href="https://discord.gg/EfExC7H">Discord Server</a>
+          <a class="dropdown-item" href="/about">About</a>
+          <a class="dropdown-item" href="/howto">How To Use</a>
+          <a class="dropdown-item" href="/resources">Resources</a>
+          <a class="dropdown-item" href="https://discord.gg/EfExC7H">Discord Server</a>
         </div>
       </li>
       <li class="nav-item dropdown">
