--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,8 +17,10 @@
     <h4>{{ total }} Total Scores</h4>
   </div>
     <hr class="my-4">
+    {% set count = namespace(a=0) %}
     {% for score in scores.items %}
-      <article class="media content-section animated fadeInLeft" style="overflow: auto; height: 100%;">
+      {% set count.a = count.a + 0.1 %}
+      <article class="media content-section animated fadeInLeft" style="overflow: auto; height: 100%; animation-delay: {{ count.a|float }}s;">
         <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
         <div class="media-body">
           <div class="article-metadata">
