commit show font

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat>
     {% block head %}
       {% block title %}
         <title>Arrow Tracker</title>
